[package]
name = "infima"
version = "0.2.0-dev"
authors = ["jeadie"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "infima"
path = "src/embed.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.13"
serde_json = "1.0.67"
rand = "0.8.4"
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
llm-base = { git = "https://github.com/rustformers/llm" , branch = "main" }

clap = { version = "4.1.8", features = ["derive"] }


getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
opt-level = "s"
